# MiniGridRL

./: .gitignore  README.md  SPEC.md  cookbook.ipynb  devlog.md  pyproject.toml
configs/envs/: empty5x5.yaml
configs/experiments/: ppo_mlp_four_rooms.yaml  ppo_rnd_empty5x5.yaml  reinforce_mlp_empty.yaml  reinforce_mlp_empty5x5.yaml  reinforce_mlp_four_rooms.yaml
docs/superpowers/plans/: 2026-07-03-intrinsic-reward-exploration.md
docs/superpowers/specs/: 2026-06-24-config-driven-experiment-framework-design.md  2026-07-03-intrinsic-reward-exploration-design.md
minigridrl/: render.py  run.py
minigridrl/agents/: PPO.py  REINFORCE.py  __init__.py  factory.py  interface.py
minigridrl/envs/: __init__.py  factory.py
minigridrl/experiments/: rl_train.py
minigridrl/intrinsic/: __init__.py  factory.py  icm.py  interface.py  lpm.py  rnd.py
minigridrl/models/: __init__.py  factory.py  interface.py  mlp.py
src/: run.py  utils.py
src/envs/: factory.py
tests/: test_agent_vectorize.py  test_env_factory.py  test_gae.py  test_icm.py  test_intrinsic_interface.py  test_lpm.py  test_ppo_intrinsic.py  test_render.py  test_rnd.py
