[project]
name = "minigridrl"
version = "0.1.0"
description = "A playground for training, evaluating, and visually demonstrating RL agents on [MiniGrid](https://minigrid.farama.org) environments."
authors = [
    { name = "Yingte Xu", email = "lucianoxu@foxmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "minigrid>=3.1.0",
]

[project.scripts]
minigridrl = "minigridrl:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
